fix(workspace): Workspace made private

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "@tomyumswap/toolkit",
   "version": "1.0.5",
   "description": "Tomyumswap frontend packages",
+  "private": true,
   "workspaces": [
     "packages/*"
   ],
