fix(pretty): Added pretty script

--- a/packages/pancake-uikit/package.json
+++ b/packages/pancake-uikit/package.json
@@ -16,6 +16,7 @@
     "lint": "eslint 'src/**/*.{js,jsx,ts,tsx}'",
     "format:check": "prettier --check --loglevel error 'src/**/*.{js,jsx,ts,tsx}'",
     "format:write": "prettier --write 'src/**/*.{js,jsx,ts,tsx}'",
+    "pretty": "prettier --write '**/*.{js,jsx,json,ts,tsx}' ",
     "storybook": "start-storybook -p 6006",
     "storybook:build": "build-storybook",
     "test": "jest",
@@ -33,6 +34,7 @@
     "jest-styled-components": "^7.0.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "prettier": "^2.3.2",
     "react-router-dom": "^5.2.0",
     "styled-components": "^5.2.0"
   },
